Added initial thread trace implementation
git-svn-id: http://svn.code.sf.net/p/perfmon4j/code/trunk@203 38ac2094-77c1-42ba-995b-c18f1c0364f1